
syntax = "proto3";

package ds_alert_send_status;

import "google/protobuf/empty.proto";
import "google/protobuf/field_mask.proto";
import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

message DsAlertSendStatusBean {

    int32 id=1;
    int32 alert_id=2;
    int32 alert_plugin_instance_id=3;
    optional int32 send_status=4;
    optional string log=5;
    optional string create_time=6;
}

// Generated according to https://cloud.google.com/apis/design/standard_methods
service DsAlertSendStatusBeanService {
  rpc ListDsAlertSendStatusBeans(ListDsAlertSendStatusBeansRequest) returns (ListDsAlertSendStatusBeansResponse) {
    option (google.api.http) = {
      get: "/v1alpha1/DsAlertSendStatusBeans"
    };
  }

  rpc GetDsAlertSendStatusBean(GetDsAlertSendStatusBeanRequest) returns (DsAlertSendStatusBean) {
    option (google.api.http) = {
      get: "/v1alpha1/{name=DsAlertSendStatusBeans/*}"
    };
  }

  rpc CreateDsAlertSendStatusBean(CreateDsAlertSendStatusBeanRequest) returns (DsAlertSendStatusBean) {
    option (google.api.http) = {
      post: "/v1alpha1/DsAlertSendStatusBeans"
      body: "DsAlertSendStatusBean"
    };
  }

  rpc UpdateDsAlertSendStatusBean(UpdateDsAlertSendStatusBeanRequest) returns (DsAlertSendStatusBean) {
    option (google.api.http) = {
      patch: "/v1alpha1/{DsAlertSendStatusBean.name=DsAlertSendStatusBeans/*}"
      body: "DsAlertSendStatusBean"
    };
  }

  rpc DeleteDsAlertSendStatusBean(DeleteDsAlertSendStatusBeanRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1alpha1/{name=DsAlertSendStatusBeans/*}"
    };
  }
}

// message DsAlertSendStatusBean {
// ! This should be defined elsewhere
// }

message ListDsAlertSendStatusBeansRequest {


  // The maximum number of items to return.
  int32 page_size = 1;

 int32 page_num = 2;
}

message ListDsAlertSendStatusBeansResponse {
  // The field name should match the noun "DsAlertSendStatusBean" in the method name.
  // There will be a maximum number of items returned based on the page_size field in the request.
  repeated DsAlertSendStatusBean DsAlertSendStatusBeans = 1;

  // Token to retrieve the next page of results, or empty if there are no more results in the list.
  string next_page_token = 2;
}

message GetDsAlertSendStatusBeanRequest {
  // The field will contain name of the resource requested.
  string name = 1;
}

message CreateDsAlertSendStatusBeanRequest {
  // The parent resource name where the DsAlertSendStatusBean is to be created.
  string parent = 1;

  // The DsAlertSendStatusBean id to use for this DsAlertSendStatusBean.
  string DsAlertSendStatusBean_id = 2;

  // The DsAlertSendStatusBean resource to create.
  // The field name should match the Noun in the method name.
  DsAlertSendStatusBean DsAlertSendStatusBean = 3;
}

message UpdateDsAlertSendStatusBeanRequest {
  // The DsAlertSendStatusBean resource which replaces the resource on the server.
  DsAlertSendStatusBean DsAlertSendStatusBean = 1;

  // The update mask applies to the resource. For the `google.protobuf.FieldMask` definition,
  // see https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#google.protobuf.FieldMask
  google.protobuf.FieldMask update_mask = 2;
}

message DeleteDsAlertSendStatusBeanRequest {
  // The resource name of the DsAlertSendStatusBean to be deleted.
  string name = 1;
}
